--- a/Practica2/src/main/resources/messages.properties
+++ b/Practica2/src/main/resources/messages.properties
@@ -1,8 +1,26 @@
 #Representa el archivo por defecto.
-con_atributo=Mi atributo {0}
-derecho_autor=Derechos reservados Carlos Camacho
+eliminar=Eliminar
 et=
-nuevo_atributo=EspaÃ±ol
-otro=kkkk    
-saludo=Hola
-titulo2=asdasd
+form1=Nombre
+form2=Descripcion
+header1=Proyectos
+header2=Usuarios
+header3=Iniciar Sesion
+proyecto1=Administrar
+ver=Ver
+form3=Verbo
+form4=Ruta
+form5=Estado de Respuesta
+form6=Cuerpo
+form7=Tiempo de Expiracion
+form8=Tiempo de Demora
+form9=Habilitar JWT
+
+user1=Usuario
+user2=Contraseña
+user3=Permiso
+proyecto=Proyecto
+estado=Estado
+aceptar=Aceptar
+cancelar=Cancelar
+
